--- a/lectures/213-animations/index.html
+++ b/lectures/213-animations/index.html
@@ -110,7 +110,16 @@
         </div>
         <!-- TARJETA ELF -->
     </div> 
-    
+    <div class="resume-container">
+        <img class="profile-picture" src="PosterWeb.jpg" alt="Profile Picture">
+        <p>Poster [CAMPAÑA NAVIDEÑA]</p>
+        <div class="contact-info">
+            <!-- <p>Super Santa Card: <a href="f001h.html">f001h</a></p> -->
+            <p>POSTER: <a href="f004e.html">f004e</a></p>
+            
+        </div>
+        <!-- POSTER -->
+    </div> 
 </body>
 </html>
 
