--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <P></P>
         <p class="center"><strong><em>Launch yourself solo or in collaboration to create your own augmented reality cinema experience using Blender </em></strong></p>
         <P><p class="space"></P></P>
-        <p><i class="fas fa-quote-left"></i><strong> Hi, I'm, the creator of this project. I want to tell you a personal story that motivated me to do this. A few years ago, I was diagnosed with post-pandemic depression, a condition that affected many people after the global health crisis. I felt sad, lonely and without any purpose in life. Then I found Pierrick Picaut on the internet and his course “Alive! Blender animation course”, and this therapy saved my life.  Thanks Pier and Thanks Blender. EgO... </strong><i class="fas fa-quote-right"></i></p>
+        <p><i class="fas fa-quote-left"></i><strong> Hi, I'm the creator of this project. I want to tell you a personal story that motivated me to do this. A few years ago, I was diagnosed with post-pandemic depression, a condition that affected many people after the global health crisis. I felt sad, lonely and without any purpose in life. Then I found Pierrick Picaut on the internet and his course “Alive! Blender animation course”, and this therapy saved my life.  Thanks Pier and Thanks Blender. Ego... </strong><i class="fas fa-quote-right"></i></p>
         <P></P>
         <P></P>
             <p> This experience made me realize the power and the potential of Blender, the free and open source software for 3D content creation. I decided to use it to create something amazing and innovative: a nano film in augmented reality. I called it a "Blender AR Nano Film", and I want to share it with you and invite you to participate in a free and open festival of "Blender AR Nano Films".</p>
