--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
         <h2>Free Opening of "Blender AR Nano Film" Festival </h2>
         <P></P>
-        <p class="center"><strong><em>Launch yourself solo or in collaboration to create your own augmented reality cinema experience using Blender </em></strong></p>
+        <p class="center"><strong><em>Launch yourself solo or in collaboration to create your own augmented reality nano film experience using Blender </em></strong></p>
         <P><p class="space"></P></P>
         <p><i class="fas fa-quote-left"></i><strong> Hi, I’m Ego, the creator of this project. I want to tell you a personal story that motivated me to do this. A few years ago, I was diagnosed with post-pandemic depression, a condition that affected many people after the global health crisis. I felt sad, lonely and without any purpose in life. Then I found Pierrick Picaut on the internet and his course “Alive! Blender animation course”, and this course saved my life. Thanks Pierrick and thanks Blender. Ego… </strong><i class="fas fa-quote-right"></i></p>
         <P></P>
@@ -55,7 +55,7 @@
         <p><i class="fas fa-quote-left"></i><strong> and we will send you a FREE - "Blender AR Nano Film" - Christmas card so you can have “A SUPER SANTA CHRISTMAS, AUGMENTED AND WITHOUT EXCESS ALCOHOL” (Accident prevention campaign).</strong><i class="fas fa-quote-right"></i></p>
         <p>I hope you liked my initiative and that you are encouraged to participate in the “Free Opening "Blender AR Nano Film" Festival”.</p>
         <p></p>
-        <p><h2>See you soon!</h2></p>
+        <p><h2>See you soon! Ego.</h2></p>
         <!-- <div class="button">
             <a href="#" class="btn"> .  Blender AR Nano Film </a>
         </div> -->
